Add links to top-right navbar items.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<div id="container">
 		<header>		
 			<div id="navbar-topright">
-				<div class="topnav" id="gmail">Gmail</div>
-				<div class="topnav" id="images">Images</div>
-				<div class="topnav" id="app-grid">Apps</div>
-				<div class="topnav" id="sign-in"> Sign in</div>
+				<div class="topnav" id="gmail"><a href="https://www.gmail.com">Gmail</a></div>
+				<div class="topnav" id="images"><a href="https://images.google.com">Images</a></div>
+				<div class="topnav" id="app-grid"><a href="https://www.google.com/intl/en/about/products/">Apps</a></div>
+				<div class="topnav" id="sign-in"><a href="https://accounts.google.com/Login?hl=EN"> Sign in</a></div>
 			</div>
 		</header>
 
